--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,9 +20,9 @@
 
 				<div class="justify-self-center">
 					{% if app.user %}
-						{# <a href="{{ path('collection') }}" class="px-3 py-1.5 rounded-lg hover:bg-white/10 transition">
+						<a href="{{ path('collection') }}" class="px-3 py-1.5 rounded-lg hover:bg-white/10 transition">
 							Collection
-						</a> #}
+						</a>
 					{% endif %}
 				</div>
 
